updating jobs api
